--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,3 +17,21 @@ table td {
   border: 1px solid rgb(200, 200, 200);
   border-collapse: collapse;
 }
+.add-product td {
+  padding: 0;
+  height: 12px;
+}
+.add-product input {
+  width: 90%;
+  height: 35px;
+  padding-left: 9px;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  color: rgb(28, 6, 124);
+}
+.add-button {
+  text-align: center;
+}
